# par-dfs

./: .bumpversion.toml  Cargo.toml  README.md  TODO.md  index.html  taskfile.yaml
.github/workflows/: bench.yml  build.yml  test.yml
benches/: benches.rs
collatz_async_bfs/: index.html
collatz_async_bfs/ordered/: index.html
collatz_async_bfs/unordered/: index.html
collatz_async_dfs/: index.html
collatz_async_dfs/ordered/: index.html
collatz_async_dfs/unordered/: index.html
collatz_sync_bfs/: index.html
collatz_sync_bfs/parallel (2 threads)/: index.html
collatz_sync_bfs/parallel (4 threads)/: index.html
collatz_sync_bfs/parallel bridge (2 threads)/: index.html
collatz_sync_bfs/sequential/: index.html
collatz_sync_customdfs/: index.html
collatz_sync_customdfs/parallel (2 threads)/: index.html
collatz_sync_customdfs/parallel (4 threads)/: index.html
collatz_sync_customdfs/parallel bridge (2 threads)/: index.html
collatz_sync_customdfs/sequential/: index.html
collatz_sync_dfs/: index.html
collatz_sync_dfs/parallel (2 threads)/: index.html
collatz_sync_dfs/parallel (4 threads)/: index.html
collatz_sync_dfs/parallel bridge (2 threads)/: index.html
collatz_sync_dfs/sequential/: index.html
collatz_sync_fastbfs/: index.html
collatz_sync_fastbfs/parallel (2 threads)/: index.html
collatz_sync_fastbfs/parallel (4 threads)/: index.html
collatz_sync_fastbfs/parallel bridge (2 threads)/: index.html
collatz_sync_fastbfs/sequential/: index.html
collatz_sync_fastdfs/: index.html
collatz_sync_fastdfs/parallel (2 threads)/: index.html
collatz_sync_fastdfs/parallel (4 threads)/: index.html
collatz_sync_fastdfs/parallel bridge (2 threads)/: index.html
collatz_sync_fastdfs/sequential/: index.html
crates/collatz-dfs/: Cargo.toml
crates/collatz-dfs/src/: lib.rs
examples/: deref_test.rs
examples/async/: fs.rs
examples/sync/: fs.rs
src/: lib.rs  utils.rs
src/async/: bfs.rs  dfs.rs  mod.rs
src/sync/: bfs.rs  dfs.rs  mod.rs  par.rs  queue.rs
