[package]
name = "par-dfs"
version = "0.1.0"
edition = "2021"
authors = ["romnn <contact@romnn.com>"]
description = "Parallel, serial, and async dfs and bfs traversal"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/romnn/par-dfs"
repository = "https://github.com/romnn/par-dfs"
categories = [
  "concurrency",
  "asynchronous",
  "data-structures",
  "algorithms"
]
keywords = [
  "dfs",
  "bfs",
  "async",
  "rayon",
  "tokio"
]
exclude = []

[[bench]]
name = "benches"
harness = false

[features]
default = ["sync"]
full = ["sync", "async", "rayon"]
rayon = ["dep:rayon"]
sync = []
async = []
# async = ["dep:git-repository"]

[dependencies]
thiserror = "1"
rayon = { version = "1", optional = true }

[dev-dependencies]
paste = "1"
criterion = "0.4"
anyhow = "1"
pretty_assertions = "1.3"
